# SandClock

./: .clang-format  .gitattributes  CMakeLists.txt  README.md
Gallery/: SandClock.mov
Sources/: Input.cpp  Input.h  Main.cpp  Scene.cpp  Scene.h  Tile.cpp  Tile.h  Time.cpp  Time.h  Utils.h
